# netaro-settlement-router

./: .env.example  .gitignore  ADR.md  ARCHITECTURE.md  AUDIT.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_durable_payout_and_ledger_guards.py
app/: db.py  decimal_policy.py  ledger.py  main.py  models.py  provider.py  routing.py  schemas.py  seed.py  service.py
docs/superpowers/plans/: 2026-07-12-docker-e2e-audit.md  2026-07-12-netaro-settlement-router.md
docs/superpowers/specs/: 2026-07-12-docker-e2e-audit-design.md  2026-07-12-settlement-router-design.md
tests/: conftest.py  load_test.py
tests/e2e/: __init__.py  run.py  test_docker_api.py
tests/integration/: test_api.py  test_concurrency.py  test_connection_release.py  test_idempotency.py  test_ledger.py  test_reconciliation.py  test_settlements.py
tests/unit/: test_decimal_policy.py  test_e2e_runner.py  test_load_runner.py  test_provider.py  test_routing.py  test_routing_properties.py
